--- a/src/components/TuringTape.css
+++ b/src/components/TuringTape.css
@@ -13,7 +13,7 @@
     width: 100%;
   }
   .tape-cell {
-    width: 30px;
+    width: 40px;
     height: 30px;
     border: 1px solid black;
     display: flex;
@@ -24,6 +24,6 @@
   
   .head {
     transform: scale(1.2);
-    background-color: #646cff;
+    background-color: #000;
   }
   
